# tech-zephyr-spot-navigation

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/spot_navigation/lib/spot_navigation/: spot_navigator
install/spot_navigation/share/spot_navigation/: package.dsv  package.ps1  package.sh  package.xml
install/spot_navigation/share/spot_navigation/worlds/: empty_room-2.sdf  hackathon_backup.sdf
log/: latest_build
src/spot_navigation/: package.xml  setup.py
src/spot_navigation/spot_navigation/: __init__.py  spot_sequential_navigator.py
src/spot_navigation/worlds/: empty_room-2.sdf  hackathon_backup.sdf
